# zrhoffman.net

./: .gitignore  Cargo.toml
docker/: build.sh  refresh.sh  run.sh
docker/entrypoints/: rocket.sh  web.sh
docker/nginx/: nginx.conf
docker/nginx/conf.d/: default.conf
migrations/2018-11-20-053706_create_posts/: up.sql
public/css/: global.css
public/frontend/css/: global.css
src/: lib.rs  main.rs  models.rs  schema.rs  structs.rs
templates/: base.html.tera  blog.html.tera  index.html.tera
templates/partials/: post.html.tera
