[package]
name = "zrhoffman_net"
version = "0.0.0"
authors = ["zrhoffman <zach@zrhoffman.net>"]
edition = "2018"

[dependencies]
rocket = "0.4.0-rc.1"
rocket_contrib_codegen = "0.4.0-rc.1"
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
diesel = { version = "1.3.3", features = ["postgres", "chrono"] }
chrono = { version = "0.4.6", features = ["serde"] }
chrono-tz = "0.5.0"
openssl = "*" # needed for diesel with musl libc

[dependencies.rocket_contrib]
version = "0.4.0-rc.1"
default-features = false
features = ["tera_templates", "diesel_postgres_pool"]
